--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ section {
 	width: 800px;
 	margin: 100px auto;
 }
-section h1,
 section p {
 	text-align: center;
 	color: #454545;
@@ -10,6 +9,8 @@ section p {
 section h1 {
 	font: 32px 'Open Sans';
 	font-weight: bold;
+	text-align: center;
+	color: #ffe6e6;
 }
 section p {
 	font: 16px 'Open Sans';
